[package]
name = "cansimple"
description = "An implementation of the CANSimple identifier scheme"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { version = "1.1", optional = true }
embedded-can = "0.4.1"

[features]
defmt-1 = ["dep:defmt"]
