[package]
name = "odrive"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
cansimple = "0.1.0"
bitflags = "2.9.1"
embedded-can = { version = "0.4.1", optional = true }
socketcan = { version = "3.5.0", optional = true, features = ["tokio"] }

[features]
default = ["can"]
can = ["dep:embedded-can", "dep:socketcan"]

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
